Missing space in error message

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Trivial - P5
    • 3.2.1, 3.3.0
    • Affects Version/s: 3.2.0
    • Component/s: Logging
    • Fully Compatible
    • ALL
    • Hide

      Start mongod with --enableMajorityReadConcern with pre-existing mmapv1 files (or setting storage engine to mmapv1)

      Show
      Start mongod with --enableMajorityReadConcern with pre-existing mmapv1 files (or setting storage engine to mmapv1)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      2015-12-11T10:42:32.976-0800 F STORAGE  [initandlisten] Majority read concern requires a storage engine that supportssnapshots, such as wiredTiger. mmapv1 does not support snapshots.
      

      "supportssnapshots" should be "supports snapshosts"

            Assignee:
            Ramon Fernandez
            Reporter:
            Hannes Magnusson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: