SERVER-21870: Add space between "supports" and "snapshots" in error message

Signed-off-by: Ramon Fernandez <ramon@mongodb.com>

Closes #1051